text alignment fixes

--- a/Style/main.css
+++ b/Style/main.css
@@ -77,6 +77,7 @@ article{ grid-area: article;
   font-size: 20px;
   font-weight: bold;
   padding-left: 2%;
+  padding-top: 1%; 
 }
 
 #articleimage{ grid-area: article-image;
